Go to http://github.com/plack/Plack/issues for the roadmap and known issues.

{{$NEXT}}

1.0030  2013-11-23 08:54:01 CET
    [IMPROVEMENTS]
        - Middleware::LogDispatch stringifies objects (oalders) #427
        - Encode wide character strings as UTF-8 in HTTP::Server::PSGI #429
        - Optimize Plack::Response->finalize performance (kazeburo) #433
        - Optimize mount() performance in Plack::App::URLMap

    [BUG FIXES]
        - ErrorDocument: remove Content-Encoding and Transfer-Encoding (kazeburo) #430
        - Fix harakiri test hang on win32 (wchristian) #431
        - Handler::FCGI: Restore --keep-stderr option (mauzo) #432

1.0029  2013-08-22 14:05:44 PDT
    [NEW FEATURES]
        - Plack::Test now has a simpler object-oriented interface that doesn't
          take multiple callbacks. #420

    [IMPROVEMENTS]
        - bump dependencies for Test::TCP and HTTP::Tiny
        - Set no_proxy for HTTP::Tiny in tests (kazeburo)

    [INCOMPATIBLE CHANGES]
        - Split HTTP::Server::Simple handler from Plack distribution and merge to
          HTTP-Server-Simple-PSGI distribution

1.0028  2013-06-15 01:42:52 PDT
    [IMPROVEMENTS]
        - Skip cgi related tests for Win32 (chorny) #413
        - Skip tests that could potentially write empty bytes, which could cause
          issues on some servers on local sockets with HTTP::Tiny
        - Skip tests that require HTTP::Cookies, if not available #414

1.0027  2013-06-13 21:30:12 PDT
    [IMPROVEMENTS]
        - Not a dev release, including XS free version of Plack::Test*
        - Fix cgibin tests that often fail on Win32 #375

1.0026  2013-06-12 23:00:21 PDT
    [INCOMPATIBLE CHANGES]
        - use HTTP::Tiny in Plack::Test::Suite and Plack::Test::Server rather than skipping it.

1.0025  2013-06-12 13:08:58 PDT
    [INCOMPATIBLE CHANGES]
        - No XS! Eliminates dependency to LWP::UserAgent by making it completely optional for